--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cars</title>
+    <link rel="stylesheet" href="index.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1 id="hop">Vitalik Tsystanov</h1>
-    <p id="hopas">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, eligendi.
-    </p>
-    <script src="main.js"></script>
+    <canvas id="canvas" width="350" height="350"></canvas>
+    <script src="js/main.js"></script>
   </body>
 </html>
